Fix horizontal alignment of button

--- a/FinalProject/Sockets/Frontend/frontend/src/components/edit_profile/edit_profile.css
+++ b/FinalProject/Sockets/Frontend/frontend/src/components/edit_profile/edit_profile.css
@@ -1,3 +1,6 @@
+td{
+    vertical-align: baseline;
+}
 
 .content {
     width: 60vw;
